--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:13306/pizzeriaDominos?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=up1zz3r14
+spring.datasource.password=pp1zz3r14
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
