--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,16 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+/*
+jar {
+	manifest {
+		attributes(
+				'Main-Class': 'com.platzi.pizzeriaDominos.PizzeriaDominosApplication'
+		)
+	}
+}
+
+bootJar {
+	'com.platzi.pizzeriaDominos.PizzeriaDominosApplication'
+}
+*/
