--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
+# DataSource configuration
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:13306/pizzeriaDominos?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria
 spring.datasource.username=up1zz3r14
 spring.datasource.password=pp1zz3r14
 
+# Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
