--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-# DataSource configuration
+# DataSource configuration using Docker
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/pizzeria
 spring.datasource.username=up1zz3r14
@@ -6,5 +6,10 @@ spring.datasource.password=pp1zz3r14
 
 # Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+
+# Spring Security
+#logging.level.org.springframework.security.web=DEBUG
+jwt.secret.key=pl4tz1_p1zz4
